[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['valueguessr']

[tool.uv.sources]
value-guessr = { workspace = true }

[project]
name = "value-guessr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "value-guessr",
]
