[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['valueguessr']

[tool.uv.sources]
value-guessr = { workspace = true }

[project]
name = "value-guessr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.8.11",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pymysql>=1.1.1",
    "scikit-learn>=1.6.0",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "trino>=0.331.0",
    "typing-extensions>=4.12.2",
    "vertica-python>=1.4.0",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "value-guessr",
]
